//
// Protocol buffers definition for Silo server
//
syntax = "proto3";
package pt.tecnico.sauron.A20.silo.grpc;
option java_multiple_files = true;

import "google/protobuf/timestamp.proto";

enum ObjectType {
    CAR = 0;
    PERSON = 1;
}

message Coordinates {
    double latitude = 1;
    double longitude = 2;
}

message Cam {
    string name = 1;
    Coordinates coordinates = 2;
}

message Object {
    ObjectType type = 1;
    string id = 2;
}

message Observation {
    Object object = 1;
    Cam cam = 2;
    google.protobuf.Timestamp timestamp = 3;
}


message CamJoinRequest {
    string name = 1;
    Coordinates coordinates = 2;
}

message CamJoinResponse { }

message CamInfoRequest {
    string name = 1;
}

message CamInfoResponse {
    Coordinates coordinates = 2;
}

message ReportRequest {
    string name = 1;
    repeated Object object = 2;
}

message ReportResponse { }

message TrackRequest {
    ObjectType type = 1;
    string id = 2;		// exact id
}

message TrackResponse {
    Observation observation = 2;
}

message TrackMatchRequest {
    ObjectType type = 1;
    string id = 2;		// incomplete id
}

message TrackMatchResponse {
    repeated Observation observations = 2;
}

message TraceRequest {
    ObjectType type = 1;
    string id = 2;		// exact id
}

message TraceResponse {
    repeated Observation observations = 2;
}



message PingRequest {
    string input = 2;
}

message PingResponse {
    string output = 2;
}

message ClearRequest {
}

message ClearResponse { }



service Sauron {
    rpc CamJoin(CamJoinRequest) returns (CamJoinResponse);

    rpc CamInfo(CamInfoRequest) returns (CamInfoResponse);

    rpc Report(ReportRequest) returns (ReportResponse);

    rpc Track(TrackRequest) returns (TrackResponse);

    rpc TrackMatch(TrackMatchRequest) returns (TrackMatchResponse);

    rpc Trace(TraceRequest) returns (TraceResponse);

    rpc CtrlPing(PingRequest) returns (PingResponse);

    rpc CtrlClear(ClearRequest) returns (ClearResponse);
}
